base/flaskapp-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-project
  name: test-project
  namespace: test-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-project
  strategy: {}
  template:
    metadata:
      labels:
        app: test-project
    spec:
      containers:
      - image: quay.io/ayedsamy/python-docker:latest
        name: python-docker
        resources: {}
---
