base/flaskapp-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flaskapp
  name: flaskapp
  namespace: flaskapp
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: flaskapp
---
