base/flaskapp-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: test-project
  name: test-project
  namespace: test-project
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: test-project
    weight: 100
